# thor

./: .gitignore  CMakeLists.txt  README.md
example/: main.thor  program1.thor  program2.thor
example/math/: basic.thor
examples/: hello.thor
include/: AST.h  CodeGenerator.h  ImportProcessor.h  Lexer.h  Parser.h  Token.h
sandbox/: main.thor
src/: AST.cpp  CodeGenerator.cpp  ImportProcessor.cpp  Lexer.cpp  Parser.cpp  Token.cpp  main.cpp
